# wifi-commissioning-service

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md
examples/unix-socket-client/: README.md  wifi-client.sh
examples/web-ble-client/: README.md  client.js  index.html
src/: lib.rs  main.rs
src/backend/: mock_backend.rs  mod.rs  wifi_backend.rs  wifi_ctrl_backend.rs  wpactrl_backend.rs
src/config/: cli.rs  mod.rs  settings.rs
src/core/: authorization.rs  connector.rs  error.rs  mod.rs  scanner.rs  service.rs  types.rs
src/protocol/: jsonrpc.rs  mod.rs  notification.rs  request.rs  response.rs
src/transport/: mod.rs
src/transport/ble/: adapter.rs  characteristics.rs  gatt.rs  mod.rs  session.rs  uuids.rs
src/transport/unix_socket/: handler.rs  mod.rs  server.rs  session.rs
src/util/: mod.rs
systemd/: wifi-commissioning-gatt@.service  wifi-commissioning-service@.service  wifi-commissioning-service@.socket
