[package]
authors = ["jan.zachmann@conplement.de"]
description = "WiFi commissioning service with BLE GATT and Unix socket interfaces"
edition = "2024"
homepage = "https://www.omnect.io/home"
license = "MIT OR Apache-2.0"
name = "wifi-commissioning-service"
repository = "https://github.com/omnect/wifi-commissioning-service"
version = "0.1.0"

[[bin]]
name = "wifi-commissioning-service"
path = "src/main.rs"

[lib]
name = "wifi_commissioning_service"
path = "src/lib.rs"

[dependencies]
bluer = { version = "0.17", default-features = false, features = ["bluetoothd"] }
clap = { version = "4.5", default-features = false, features = ["derive", "std"] }
futures = { version = "0.3", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sd-notify = { version = "0.4", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
sha3 = { version = "0.10", default-features = false }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "process", "signal", "fs"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "std", "registry"] }
trait-variant = { version = "0.1", default-features = false }
uuid = { version = "1.0", default-features = false, features = ["v4", "serde"] }
wpactrl = { version = "0.5", default-features = false }

[dev-dependencies]
pretty_assertions = { version = "1.0", default-features = false, features = ["std"] }
tempfile = { version = "3.0", default-features = false }
tokio-test = { version = "0.4", default-features = false }

[features]
default = []
systemd = ["sd-notify"]
